// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnnouncementsList refreshes when there are no announcements 1`] = `
<AnnouncementsList
  announcements={Array []}
  refresh={[Function]}
  refreshAnnouncements={[Function]}
  refreshCourse={[Function]}
  refreshing={false}
/>
`;

exports[`AnnouncementsList refreshes when there are no announcements 2`] = `
<AnnouncementsList
  announcements={Array []}
  context="courses"
  refresh={[Function]}
  refreshAnnouncements={[Function]}
  refreshCourse={[Function]}
  refreshing={false}
/>
`;

exports[`AnnouncementsList refreshes when there are no permissions 1`] = `
<AnnouncementsList
  announcements={
    Array [
      Object {
        "allow_rating": false,
        "assignment": Object {
          "assignment_group_id": 1376,
          "automatic_peer_reviews": false,
          "course_id": "987654321",
          "created_at": "2017-03-17T19:15:25Z",
          "description": "a course that can take any beginner to professional in a matter of microseconds.  Harness the power of your favorite languages like PHP and Cold Fusion.",
          "due_at": "2037-06-01T05:59:00Z",
          "grade_group_students_individually": false,
          "grading_type": "points",
          "group_category_id": null,
          "has_overrides": false,
          "html_url": "http://hostname.tld/whatever",
          "id": "123456789",
          "lock_at": "2037-06-01T05:59:59Z",
          "name": "learn to write code",
          "needs_grading_count": 0,
          "only_visible_to_overrides": false,
          "overrides": Array [],
          "peer_reviews": false,
          "points_possible": 20,
          "position": 1,
          "published": true,
          "rubric": null,
          "rubric_assessment": Object {},
          "rubric_settings": null,
          "submission_types": Array [
            "online_text_entry",
            "online_url",
            "media_recording",
            "online_upload",
          ],
          "unlock_at": "2017-03-17T06:00:00Z",
          "unpublishable": false,
          "updated_at": "2017-03-17T19:15:25Z",
        },
        "assignment_id": "123456789",
        "author": Object {
          "avatar_image_url": "http://www.fillmurray.com/100/100",
          "avatar_url": "http://www.fillmurray.com/100/100",
          "display_name": "The Donald",
          "html_url": "",
          "id": "1",
          "short_name": "The Donald",
        },
        "can_unpublish": true,
        "delayed_post_at": null,
        "discussion_subentry_count": 2,
        "discussion_type": "side_comment",
        "html_url": "http://mobiledev.instructure.com/courses/1/discussion_topics",
        "id": "1",
        "is_section_specific": false,
        "last_reply_at": "2016-12-11T04:03:17Z",
        "message": "<p>And why?</p>",
        "only_graders_can_rate": false,
        "permissions": Object {
          "attach": true,
          "delete": true,
          "reply": true,
          "update": true,
        },
        "pinned": false,
        "position": 1,
        "posted_at": "2013-11-14T16:55:00-07:00",
        "published": true,
        "read_state": "read",
        "require_initial_post": false,
        "sort_by_rating": false,
        "subscribed": true,
        "title": "Untitled",
        "unlock_at": null,
        "unread_count": 1,
        "user_can_see_posts": true,
        "user_name": "Ivy Iversen",
      },
    ]
  }
  permissions={Object {}}
  refresh={[Function]}
  refreshAnnouncements={[Function]}
  refreshing={false}
/>
`;

exports[`AnnouncementsList refreshes with new props 1`] = `
<AnnouncementsList
  announcements={Array []}
  permissions={Object {}}
  refresh={[Function]}
  refreshAnnouncements={[Function]}
  refreshing={false}
/>
`;

exports[`AnnouncementsList renders 1`] = `
<Screen
  navBarColor="blue"
  navBarStyle="dark"
  onTraitCollectionChange={[Function]}
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "New Announcement",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/Add.png",
        },
        "testID": "announcements.list.addButton",
      },
    ]
  }
  subtitle="Im a course"
  title="Announcements"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      ItemSeparatorComponent={[Function]}
      ListEmptyComponent={
        <ListEmptyComponent
          title="There are no announcements to display."
        />
      }
      data={
        Array [
          Object {
            "allow_rating": false,
            "assignment": Object {
              "assignment_group_id": 1376,
              "automatic_peer_reviews": false,
              "course_id": "987654321",
              "created_at": "2017-03-17T19:15:25Z",
              "description": "a course that can take any beginner to professional in a matter of microseconds.  Harness the power of your favorite languages like PHP and Cold Fusion.",
              "due_at": "2037-06-01T05:59:00Z",
              "grade_group_students_individually": false,
              "grading_type": "points",
              "group_category_id": null,
              "has_overrides": false,
              "html_url": "http://hostname.tld/whatever",
              "id": "123456789",
              "lock_at": "2037-06-01T05:59:59Z",
              "name": "learn to write code",
              "needs_grading_count": 0,
              "only_visible_to_overrides": false,
              "overrides": Array [],
              "peer_reviews": false,
              "points_possible": 20,
              "position": 1,
              "published": true,
              "rubric": null,
              "rubric_assessment": Object {},
              "rubric_settings": null,
              "submission_types": Array [
                "online_text_entry",
                "online_url",
                "media_recording",
                "online_upload",
              ],
              "unlock_at": "2017-03-17T06:00:00Z",
              "unpublishable": false,
              "updated_at": "2017-03-17T19:15:25Z",
            },
            "assignment_id": "123456789",
            "author": Object {
              "avatar_image_url": "http://www.fillmurray.com/100/100",
              "avatar_url": "http://www.fillmurray.com/100/100",
              "display_name": "The Donald",
              "html_url": "",
              "id": "1",
              "short_name": "The Donald",
            },
            "can_unpublish": true,
            "delayed_post_at": null,
            "discussion_subentry_count": 2,
            "discussion_type": "side_comment",
            "html_url": "http://mobiledev.instructure.com/courses/1/discussion_topics",
            "id": "1",
            "is_section_specific": false,
            "last_reply_at": "2016-12-11T04:03:17Z",
            "message": "<p>And why?</p>",
            "only_graders_can_rate": false,
            "permissions": Object {
              "attach": true,
              "delete": true,
              "reply": true,
              "update": true,
            },
            "pinned": false,
            "position": 1,
            "posted_at": "2013-11-14T16:55:00-07:00",
            "published": true,
            "read_state": "read",
            "require_initial_post": false,
            "sort_by_rating": false,
            "subscribed": true,
            "title": "Untitled",
            "unlock_at": null,
            "unread_count": 1,
            "user_can_see_posts": true,
            "user_name": "Ivy Iversen",
          },
          Object {
            "allow_rating": false,
            "assignment": Object {
              "assignment_group_id": 1376,
              "automatic_peer_reviews": false,
              "course_id": "987654321",
              "created_at": "2017-03-17T19:15:25Z",
              "description": "a course that can take any beginner to professional in a matter of microseconds.  Harness the power of your favorite languages like PHP and Cold Fusion.",
              "due_at": "2037-06-01T05:59:00Z",
              "grade_group_students_individually": false,
              "grading_type": "points",
              "group_category_id": null,
              "has_overrides": false,
              "html_url": "http://hostname.tld/whatever",
              "id": "123456789",
              "lock_at": "2037-06-01T05:59:59Z",
              "name": "learn to write code",
              "needs_grading_count": 0,
              "only_visible_to_overrides": false,
              "overrides": Array [],
              "peer_reviews": false,
              "points_possible": 20,
              "position": 1,
              "published": true,
              "rubric": null,
              "rubric_assessment": Object {},
              "rubric_settings": null,
              "submission_types": Array [
                "online_text_entry",
                "online_url",
                "media_recording",
                "online_upload",
              ],
              "unlock_at": "2017-03-17T06:00:00Z",
              "unpublishable": false,
              "updated_at": "2017-03-17T19:15:25Z",
            },
            "assignment_id": "123456789",
            "author": Object {
              "avatar_image_url": "http://www.fillmurray.com/100/100",
              "avatar_url": "http://www.fillmurray.com/100/100",
              "display_name": "The Donald",
              "html_url": "",
              "id": "1",
              "short_name": "The Donald",
            },
            "can_unpublish": true,
            "delayed_post_at": null,
            "discussion_subentry_count": 2,
            "discussion_type": "side_comment",
            "html_url": "http://mobiledev.instructure.com/courses/1/discussion_topics",
            "id": "2",
            "is_section_specific": false,
            "last_reply_at": "2016-12-11T04:03:17Z",
            "message": "<p>And why?</p>",
            "only_graders_can_rate": false,
            "permissions": Object {
              "attach": true,
              "delete": true,
              "reply": true,
              "update": true,
            },
            "pinned": false,
            "position": 1,
            "posted_at": "2013-10-28T14:16:00-07:00",
            "published": true,
            "read_state": "read",
            "require_initial_post": false,
            "sort_by_rating": false,
            "subscribed": true,
            "title": "Getting Started in Biology 101",
            "unlock_at": null,
            "unread_count": 1,
            "user_can_see_posts": true,
            "user_name": "Ivy Iversen",
          },
        ]
      }
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onRefresh={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      refreshControl={
        <RefreshControlMock
          onRefresh={[Function]}
          progressViewOffset={undefined}
          refreshing={false}
        />
      }
      refreshing={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      testID="announcements.list.list"
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={21}
    >
      <RCTRefreshControl />
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <TouchableHighlight
            accessibilityLabel={undefined}
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            onPress={[Function]}
            style={
              Array [
                undefined,
                Object {
                  "borderBottomColor": "#C7CDD1",
                  "borderBottomWidth": 0.5,
                },
              ]
            }
            testID="announcements.list.announcement.row-0"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "white",
                    "flex": 1,
                    "flexDirection": "row",
                    "minHeight": 54,
                    "paddingBottom": 12,
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "paddingTop": 12,
                  },
                  Object {
                    "backgroundColor": "white",
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "flexDirection": "column",
                      "justifyContent": "center",
                    },
                    Object {
                      "marginLeft": 0,
                    },
                  ]
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  numberOfLines={0}
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Array [
                        Object {
                          "fontWeight": "600",
                        },
                      ],
                      Object {
                        "fontFamily": ".SFUIDisplay-semibold",
                      },
                    ]
                  }
                >
                  Untitled
                </Text>
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "row",
                    }
                  }
                  testID="announcements.list.announcement.row-0.subtitle.custom-container"
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                        Object {
                          "color": "#2D3B45",
                          "fontSize": 16,
                        },
                        Object {
                          "color": "#8B969E",
                          "fontSize": 14,
                          "marginTop": 2,
                        },
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                      ]
                    }
                  >
                    Last post Dec 10 at 9:03 PM
                  </Text>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "justifyContent": "flex-end",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignSelf": "center",
                        "backgroundColor": "transparent",
                        "borderColor": "#c7c7cc",
                        "borderRightWidth": 2,
                        "borderTopWidth": 2,
                        "height": 10,
                        "marginLeft": 7,
                        "transform": Array [
                          Object {
                            "rotate": "45deg",
                          },
                        ],
                        "width": 10,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </TouchableHighlight>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#C7CDD1",
                  "height": 0.5,
                },
                undefined,
              ]
            }
          />
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <TouchableHighlight
            accessibilityLabel={undefined}
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            onPress={[Function]}
            style={
              Array [
                undefined,
                Object {
                  "borderBottomColor": "#C7CDD1",
                  "borderBottomWidth": 0.5,
                },
              ]
            }
            testID="announcements.list.announcement.row-1"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "white",
                    "flex": 1,
                    "flexDirection": "row",
                    "minHeight": 54,
                    "paddingBottom": 12,
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "paddingTop": 12,
                  },
                  Object {
                    "backgroundColor": "white",
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "flexDirection": "column",
                      "justifyContent": "center",
                    },
                    Object {
                      "marginLeft": 0,
                    },
                  ]
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  numberOfLines={0}
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Array [
                        Object {
                          "fontWeight": "600",
                        },
                      ],
                      Object {
                        "fontFamily": ".SFUIDisplay-semibold",
                      },
                    ]
                  }
                >
                  Getting Started in Biology 101
                </Text>
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "row",
                    }
                  }
                  testID="announcements.list.announcement.row-1.subtitle.custom-container"
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                        Object {
                          "color": "#2D3B45",
                          "fontSize": 16,
                        },
                        Object {
                          "color": "#8B969E",
                          "fontSize": 14,
                          "marginTop": 2,
                        },
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                      ]
                    }
                  >
                    Last post Dec 10 at 9:03 PM
                  </Text>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "justifyContent": "flex-end",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignSelf": "center",
                        "backgroundColor": "transparent",
                        "borderColor": "#c7c7cc",
                        "borderRightWidth": 2,
                        "borderTopWidth": 2,
                        "height": 10,
                        "marginLeft": 7,
                        "transform": Array [
                          Object {
                            "rotate": "45deg",
                          },
                        ],
                        "width": 10,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </TouchableHighlight>
        </View>
      </View>
    </RCTScrollView>
  </View>
</Screen>
`;

exports[`AnnouncementsList renders empty list 1`] = `
<Screen
  navBarColor="blue"
  navBarStyle="dark"
  onTraitCollectionChange={[Function]}
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "New Announcement",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/Add.png",
        },
        "testID": "announcements.list.addButton",
      },
    ]
  }
  subtitle="Im a course"
  title="Announcements"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      ItemSeparatorComponent={[Function]}
      ListEmptyComponent={
        <ListEmptyComponent
          title="There are no announcements to display."
        />
      }
      data={Array []}
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onRefresh={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      refreshControl={
        <RefreshControlMock
          onRefresh={[Function]}
          progressViewOffset={undefined}
          refreshing={false}
        />
      }
      refreshing={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      testID="announcements.list.list"
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={21}
    >
      <RCTRefreshControl />
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "height": 100,
                "justifyContent": "center",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": ".SFUIDisplay-semibold",
                    "fontSize": 16,
                  },
                  undefined,
                ]
              }
            >
              There are no announcements to display.
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</Screen>
`;

exports[`AnnouncementsList renders while pending 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="small"
    style={
      Object {
        "flex": 1,
      }
    }
  />
</View>
`;

exports[`AnnouncementsList renders while refreshing 1`] = `
<Screen
  navBarColor="blue"
  navBarStyle="dark"
  onTraitCollectionChange={[Function]}
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "New Announcement",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/Add.png",
        },
        "testID": "announcements.list.addButton",
      },
    ]
  }
  subtitle="Im a course"
  title="Announcements"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      ItemSeparatorComponent={[Function]}
      ListEmptyComponent={
        <ListEmptyComponent
          title="There are no announcements to display."
        />
      }
      data={
        Array [
          Object {
            "allow_rating": false,
            "assignment": Object {
              "assignment_group_id": 1376,
              "automatic_peer_reviews": false,
              "course_id": "987654321",
              "created_at": "2017-03-17T19:15:25Z",
              "description": "a course that can take any beginner to professional in a matter of microseconds.  Harness the power of your favorite languages like PHP and Cold Fusion.",
              "due_at": "2037-06-01T05:59:00Z",
              "grade_group_students_individually": false,
              "grading_type": "points",
              "group_category_id": null,
              "has_overrides": false,
              "html_url": "http://hostname.tld/whatever",
              "id": "123456789",
              "lock_at": "2037-06-01T05:59:59Z",
              "name": "learn to write code",
              "needs_grading_count": 0,
              "only_visible_to_overrides": false,
              "overrides": Array [],
              "peer_reviews": false,
              "points_possible": 20,
              "position": 1,
              "published": true,
              "rubric": null,
              "rubric_assessment": Object {},
              "rubric_settings": null,
              "submission_types": Array [
                "online_text_entry",
                "online_url",
                "media_recording",
                "online_upload",
              ],
              "unlock_at": "2017-03-17T06:00:00Z",
              "unpublishable": false,
              "updated_at": "2017-03-17T19:15:25Z",
            },
            "assignment_id": "123456789",
            "author": Object {
              "avatar_image_url": "http://www.fillmurray.com/100/100",
              "avatar_url": "http://www.fillmurray.com/100/100",
              "display_name": "The Donald",
              "html_url": "",
              "id": "1",
              "short_name": "The Donald",
            },
            "can_unpublish": true,
            "delayed_post_at": null,
            "discussion_subentry_count": 2,
            "discussion_type": "side_comment",
            "html_url": "http://mobiledev.instructure.com/courses/1/discussion_topics",
            "id": "1",
            "is_section_specific": false,
            "last_reply_at": "2016-12-11T04:03:17Z",
            "message": "<p>And why?</p>",
            "only_graders_can_rate": false,
            "permissions": Object {
              "attach": true,
              "delete": true,
              "reply": true,
              "update": true,
            },
            "pinned": false,
            "position": 1,
            "posted_at": "2013-11-14T16:55:00-07:00",
            "published": true,
            "read_state": "read",
            "require_initial_post": false,
            "sort_by_rating": false,
            "subscribed": true,
            "title": "Untitled",
            "unlock_at": null,
            "unread_count": 1,
            "user_can_see_posts": true,
            "user_name": "Ivy Iversen",
          },
          Object {
            "allow_rating": false,
            "assignment": Object {
              "assignment_group_id": 1376,
              "automatic_peer_reviews": false,
              "course_id": "987654321",
              "created_at": "2017-03-17T19:15:25Z",
              "description": "a course that can take any beginner to professional in a matter of microseconds.  Harness the power of your favorite languages like PHP and Cold Fusion.",
              "due_at": "2037-06-01T05:59:00Z",
              "grade_group_students_individually": false,
              "grading_type": "points",
              "group_category_id": null,
              "has_overrides": false,
              "html_url": "http://hostname.tld/whatever",
              "id": "123456789",
              "lock_at": "2037-06-01T05:59:59Z",
              "name": "learn to write code",
              "needs_grading_count": 0,
              "only_visible_to_overrides": false,
              "overrides": Array [],
              "peer_reviews": false,
              "points_possible": 20,
              "position": 1,
              "published": true,
              "rubric": null,
              "rubric_assessment": Object {},
              "rubric_settings": null,
              "submission_types": Array [
                "online_text_entry",
                "online_url",
                "media_recording",
                "online_upload",
              ],
              "unlock_at": "2017-03-17T06:00:00Z",
              "unpublishable": false,
              "updated_at": "2017-03-17T19:15:25Z",
            },
            "assignment_id": "123456789",
            "author": Object {
              "avatar_image_url": "http://www.fillmurray.com/100/100",
              "avatar_url": "http://www.fillmurray.com/100/100",
              "display_name": "The Donald",
              "html_url": "",
              "id": "1",
              "short_name": "The Donald",
            },
            "can_unpublish": true,
            "delayed_post_at": null,
            "discussion_subentry_count": 2,
            "discussion_type": "side_comment",
            "html_url": "http://mobiledev.instructure.com/courses/1/discussion_topics",
            "id": "2",
            "is_section_specific": false,
            "last_reply_at": "2016-12-11T04:03:17Z",
            "message": "<p>And why?</p>",
            "only_graders_can_rate": false,
            "permissions": Object {
              "attach": true,
              "delete": true,
              "reply": true,
              "update": true,
            },
            "pinned": false,
            "position": 1,
            "posted_at": "2013-10-28T14:16:00-07:00",
            "published": true,
            "read_state": "read",
            "require_initial_post": false,
            "sort_by_rating": false,
            "subscribed": true,
            "title": "Getting Started in Biology 101",
            "unlock_at": null,
            "unread_count": 1,
            "user_can_see_posts": true,
            "user_name": "Ivy Iversen",
          },
        ]
      }
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onRefresh={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      refreshControl={
        <RefreshControlMock
          onRefresh={[Function]}
          progressViewOffset={undefined}
          refreshing={true}
        />
      }
      refreshing={true}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      testID="announcements.list.list"
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={21}
    >
      <RCTRefreshControl />
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <TouchableHighlight
            accessibilityLabel={undefined}
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            onPress={[Function]}
            style={
              Array [
                undefined,
                Object {
                  "borderBottomColor": "#C7CDD1",
                  "borderBottomWidth": 0.5,
                },
              ]
            }
            testID="announcements.list.announcement.row-0"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "white",
                    "flex": 1,
                    "flexDirection": "row",
                    "minHeight": 54,
                    "paddingBottom": 12,
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "paddingTop": 12,
                  },
                  Object {
                    "backgroundColor": "white",
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "flexDirection": "column",
                      "justifyContent": "center",
                    },
                    Object {
                      "marginLeft": 0,
                    },
                  ]
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  numberOfLines={0}
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Array [
                        Object {
                          "fontWeight": "600",
                        },
                      ],
                      Object {
                        "fontFamily": ".SFUIDisplay-semibold",
                      },
                    ]
                  }
                >
                  Untitled
                </Text>
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "row",
                    }
                  }
                  testID="announcements.list.announcement.row-0.subtitle.custom-container"
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                        Object {
                          "color": "#2D3B45",
                          "fontSize": 16,
                        },
                        Object {
                          "color": "#8B969E",
                          "fontSize": 14,
                          "marginTop": 2,
                        },
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                      ]
                    }
                  >
                    Last post Dec 10 at 9:03 PM
                  </Text>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "justifyContent": "flex-end",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignSelf": "center",
                        "backgroundColor": "transparent",
                        "borderColor": "#c7c7cc",
                        "borderRightWidth": 2,
                        "borderTopWidth": 2,
                        "height": 10,
                        "marginLeft": 7,
                        "transform": Array [
                          Object {
                            "rotate": "45deg",
                          },
                        ],
                        "width": 10,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </TouchableHighlight>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#C7CDD1",
                  "height": 0.5,
                },
                undefined,
              ]
            }
          />
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <TouchableHighlight
            accessibilityLabel={undefined}
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            onPress={[Function]}
            style={
              Array [
                undefined,
                Object {
                  "borderBottomColor": "#C7CDD1",
                  "borderBottomWidth": 0.5,
                },
              ]
            }
            testID="announcements.list.announcement.row-1"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "white",
                    "flex": 1,
                    "flexDirection": "row",
                    "minHeight": 54,
                    "paddingBottom": 12,
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "paddingTop": 12,
                  },
                  Object {
                    "backgroundColor": "white",
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "flexDirection": "column",
                      "justifyContent": "center",
                    },
                    Object {
                      "marginLeft": 0,
                    },
                  ]
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  numberOfLines={0}
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Array [
                        Object {
                          "fontWeight": "600",
                        },
                      ],
                      Object {
                        "fontFamily": ".SFUIDisplay-semibold",
                      },
                    ]
                  }
                >
                  Getting Started in Biology 101
                </Text>
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "row",
                    }
                  }
                  testID="announcements.list.announcement.row-1.subtitle.custom-container"
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                        Object {
                          "color": "#2D3B45",
                          "fontSize": 16,
                        },
                        Object {
                          "color": "#8B969E",
                          "fontSize": 14,
                          "marginTop": 2,
                        },
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                      ]
                    }
                  >
                    Last post Dec 10 at 9:03 PM
                  </Text>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "justifyContent": "flex-end",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignSelf": "center",
                        "backgroundColor": "transparent",
                        "borderColor": "#c7c7cc",
                        "borderRightWidth": 2,
                        "borderTopWidth": 2,
                        "height": 10,
                        "marginLeft": 7,
                        "transform": Array [
                          Object {
                            "rotate": "45deg",
                          },
                        ],
                        "width": 10,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </TouchableHighlight>
        </View>
      </View>
    </RCTScrollView>
  </View>
</Screen>
`;

exports[`AnnouncementsList renders with no create_announcement permission 1`] = `
<Screen
  navBarColor="blue"
  navBarStyle="dark"
  onTraitCollectionChange={[Function]}
  rightBarButtons={false}
  subtitle="Im a course"
  title="Announcements"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      ItemSeparatorComponent={[Function]}
      ListEmptyComponent={
        <ListEmptyComponent
          title="There are no announcements to display."
        />
      }
      data={
        Array [
          Object {
            "allow_rating": false,
            "assignment": Object {
              "assignment_group_id": 1376,
              "automatic_peer_reviews": false,
              "course_id": "987654321",
              "created_at": "2017-03-17T19:15:25Z",
              "description": "a course that can take any beginner to professional in a matter of microseconds.  Harness the power of your favorite languages like PHP and Cold Fusion.",
              "due_at": "2037-06-01T05:59:00Z",
              "grade_group_students_individually": false,
              "grading_type": "points",
              "group_category_id": null,
              "has_overrides": false,
              "html_url": "http://hostname.tld/whatever",
              "id": "123456789",
              "lock_at": "2037-06-01T05:59:59Z",
              "name": "learn to write code",
              "needs_grading_count": 0,
              "only_visible_to_overrides": false,
              "overrides": Array [],
              "peer_reviews": false,
              "points_possible": 20,
              "position": 1,
              "published": true,
              "rubric": null,
              "rubric_assessment": Object {},
              "rubric_settings": null,
              "submission_types": Array [
                "online_text_entry",
                "online_url",
                "media_recording",
                "online_upload",
              ],
              "unlock_at": "2017-03-17T06:00:00Z",
              "unpublishable": false,
              "updated_at": "2017-03-17T19:15:25Z",
            },
            "assignment_id": "123456789",
            "author": Object {
              "avatar_image_url": "http://www.fillmurray.com/100/100",
              "avatar_url": "http://www.fillmurray.com/100/100",
              "display_name": "The Donald",
              "html_url": "",
              "id": "1",
              "short_name": "The Donald",
            },
            "can_unpublish": true,
            "delayed_post_at": null,
            "discussion_subentry_count": 2,
            "discussion_type": "side_comment",
            "html_url": "http://mobiledev.instructure.com/courses/1/discussion_topics",
            "id": "1",
            "is_section_specific": false,
            "last_reply_at": "2016-12-11T04:03:17Z",
            "message": "<p>And why?</p>",
            "only_graders_can_rate": false,
            "permissions": Object {
              "attach": true,
              "delete": true,
              "reply": true,
              "update": true,
            },
            "pinned": false,
            "position": 1,
            "posted_at": "2013-11-14T16:55:00-07:00",
            "published": true,
            "read_state": "read",
            "require_initial_post": false,
            "sort_by_rating": false,
            "subscribed": true,
            "title": "Untitled",
            "unlock_at": null,
            "unread_count": 1,
            "user_can_see_posts": true,
            "user_name": "Ivy Iversen",
          },
          Object {
            "allow_rating": false,
            "assignment": Object {
              "assignment_group_id": 1376,
              "automatic_peer_reviews": false,
              "course_id": "987654321",
              "created_at": "2017-03-17T19:15:25Z",
              "description": "a course that can take any beginner to professional in a matter of microseconds.  Harness the power of your favorite languages like PHP and Cold Fusion.",
              "due_at": "2037-06-01T05:59:00Z",
              "grade_group_students_individually": false,
              "grading_type": "points",
              "group_category_id": null,
              "has_overrides": false,
              "html_url": "http://hostname.tld/whatever",
              "id": "123456789",
              "lock_at": "2037-06-01T05:59:59Z",
              "name": "learn to write code",
              "needs_grading_count": 0,
              "only_visible_to_overrides": false,
              "overrides": Array [],
              "peer_reviews": false,
              "points_possible": 20,
              "position": 1,
              "published": true,
              "rubric": null,
              "rubric_assessment": Object {},
              "rubric_settings": null,
              "submission_types": Array [
                "online_text_entry",
                "online_url",
                "media_recording",
                "online_upload",
              ],
              "unlock_at": "2017-03-17T06:00:00Z",
              "unpublishable": false,
              "updated_at": "2017-03-17T19:15:25Z",
            },
            "assignment_id": "123456789",
            "author": Object {
              "avatar_image_url": "http://www.fillmurray.com/100/100",
              "avatar_url": "http://www.fillmurray.com/100/100",
              "display_name": "The Donald",
              "html_url": "",
              "id": "1",
              "short_name": "The Donald",
            },
            "can_unpublish": true,
            "delayed_post_at": null,
            "discussion_subentry_count": 2,
            "discussion_type": "side_comment",
            "html_url": "http://mobiledev.instructure.com/courses/1/discussion_topics",
            "id": "2",
            "is_section_specific": false,
            "last_reply_at": "2016-12-11T04:03:17Z",
            "message": "<p>And why?</p>",
            "only_graders_can_rate": false,
            "permissions": Object {
              "attach": true,
              "delete": true,
              "reply": true,
              "update": true,
            },
            "pinned": false,
            "position": 1,
            "posted_at": "2013-10-28T14:16:00-07:00",
            "published": true,
            "read_state": "read",
            "require_initial_post": false,
            "sort_by_rating": false,
            "subscribed": true,
            "title": "Getting Started in Biology 101",
            "unlock_at": null,
            "unread_count": 1,
            "user_can_see_posts": true,
            "user_name": "Ivy Iversen",
          },
        ]
      }
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onRefresh={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      refreshControl={
        <RefreshControlMock
          onRefresh={[Function]}
          progressViewOffset={undefined}
          refreshing={false}
        />
      }
      refreshing={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      testID="announcements.list.list"
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={21}
    >
      <RCTRefreshControl />
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <TouchableHighlight
            accessibilityLabel={undefined}
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            onPress={[Function]}
            style={
              Array [
                undefined,
                Object {
                  "borderBottomColor": "#C7CDD1",
                  "borderBottomWidth": 0.5,
                },
              ]
            }
            testID="announcements.list.announcement.row-0"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "white",
                    "flex": 1,
                    "flexDirection": "row",
                    "minHeight": 54,
                    "paddingBottom": 12,
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "paddingTop": 12,
                  },
                  Object {
                    "backgroundColor": "white",
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "flexDirection": "column",
                      "justifyContent": "center",
                    },
                    Object {
                      "marginLeft": 0,
                    },
                  ]
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  numberOfLines={0}
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Array [
                        Object {
                          "fontWeight": "600",
                        },
                      ],
                      Object {
                        "fontFamily": ".SFUIDisplay-semibold",
                      },
                    ]
                  }
                >
                  Untitled
                </Text>
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "row",
                    }
                  }
                  testID="announcements.list.announcement.row-0.subtitle.custom-container"
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                        Object {
                          "color": "#2D3B45",
                          "fontSize": 16,
                        },
                        Object {
                          "color": "#8B969E",
                          "fontSize": 14,
                          "marginTop": 2,
                        },
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                      ]
                    }
                  >
                    Last post Dec 10 at 9:03 PM
                  </Text>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "justifyContent": "flex-end",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignSelf": "center",
                        "backgroundColor": "transparent",
                        "borderColor": "#c7c7cc",
                        "borderRightWidth": 2,
                        "borderTopWidth": 2,
                        "height": 10,
                        "marginLeft": 7,
                        "transform": Array [
                          Object {
                            "rotate": "45deg",
                          },
                        ],
                        "width": 10,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </TouchableHighlight>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#C7CDD1",
                  "height": 0.5,
                },
                undefined,
              ]
            }
          />
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <TouchableHighlight
            accessibilityLabel={undefined}
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            onPress={[Function]}
            style={
              Array [
                undefined,
                Object {
                  "borderBottomColor": "#C7CDD1",
                  "borderBottomWidth": 0.5,
                },
              ]
            }
            testID="announcements.list.announcement.row-1"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "white",
                    "flex": 1,
                    "flexDirection": "row",
                    "minHeight": 54,
                    "paddingBottom": 12,
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "paddingTop": 12,
                  },
                  Object {
                    "backgroundColor": "white",
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "flexDirection": "column",
                      "justifyContent": "center",
                    },
                    Object {
                      "marginLeft": 0,
                    },
                  ]
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  numberOfLines={0}
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Array [
                        Object {
                          "fontWeight": "600",
                        },
                      ],
                      Object {
                        "fontFamily": ".SFUIDisplay-semibold",
                      },
                    ]
                  }
                >
                  Getting Started in Biology 101
                </Text>
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "row",
                    }
                  }
                  testID="announcements.list.announcement.row-1.subtitle.custom-container"
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                        Object {
                          "color": "#2D3B45",
                          "fontSize": 16,
                        },
                        Object {
                          "color": "#8B969E",
                          "fontSize": 14,
                          "marginTop": 2,
                        },
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                      ]
                    }
                  >
                    Last post Dec 10 at 9:03 PM
                  </Text>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "justifyContent": "flex-end",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignSelf": "center",
                        "backgroundColor": "transparent",
                        "borderColor": "#c7c7cc",
                        "borderRightWidth": 2,
                        "borderTopWidth": 2,
                        "height": 10,
                        "marginLeft": 7,
                        "transform": Array [
                          Object {
                            "rotate": "45deg",
                          },
                        ],
                        "width": 10,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </TouchableHighlight>
        </View>
      </View>
    </RCTScrollView>
  </View>
</Screen>
`;
